--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
  
       <article id="cartao_1" class="cartao">
         <div class="opcoesDoCartao">
-          <button class="opcoesDoCartao-remove opcoesDoCartao-opcao" tabindex="0">
+          <button class="opcoesDoCartao-remove opcoesDoCartao-opcao" tabindex="0" onclick="this.parentNode.parentNode.remove()">
             <svg><use xlink:href="#iconeRemover"></use></svg>
           </button>
 
@@ -73,11 +73,12 @@
             Inspiração
           </label>
         </div>
+      
         <p class="cartao-conteudo" contenteditable tabindex="0">Bem vindo ao Ceep!</p>
       </article>
       <article id="cartao_2" class="cartao">
         <div class="opcoesDoCartao">
-          <button class="opcoesDoCartao-remove opcoesDoCartao-opcao" tabindex="0">
+          <button class="opcoesDoCartao-remove opcoesDoCartao-opcao" tabindex="0" onclick="this.parentNode.parentNode.remove()">
             <svg><use xlink:href="#iconeRemover"></use></svg>
           </button>
 
@@ -105,7 +106,7 @@
       </article>
       <article id="cartao_3" class="cartao">
         <div class="opcoesDoCartao">
-          <button class="opcoesDoCartao-remove opcoesDoCartao-opcao" tabindex="0">
+          <button class="opcoesDoCartao-remove opcoesDoCartao-opcao" tabindex="0"onclick="this.parentNode.parentNode.remove()">
             <svg><use xlink:href="#iconeRemover"></use></svg>
           </button>
 
@@ -133,6 +134,7 @@
       </article>
 
     </section>
+    <script src="js/layout.js">  </script>
     
   </body>
 </html>
