--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
 
     </section>
     <script src="js/layout.js">  </script>
-    <script src="js/opcoesDoCartao/remove.js"></script>
     <script src="js/cartao.js"></script>
+    <script src="js/formNovoCartao.js"></script>
     
   </body>
 </html>
