--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,8 @@
     <script src="js/opcoesDaPagina/btnAjuda.js"></script>
     <script src="js/formNovoCartao.js"></script>
     <script src="js/mural.js"></script>
+    <script src="js/opcoesDaPagina/btnSync.js"></script>
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     
   </body>
 </html>
